--- a/app/src/main/res/layout/activity_form_product.xml
+++ b/app/src/main/res/layout/activity_form_product.xml
@@ -106,6 +106,16 @@
         app:layout_constraintTop_toBottomOf="@id/btnFormProductTakePhoto" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnFormDeleteImage"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete img"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@id/imgFormProduct"
+        app:layout_constraintStart_toStartOf="@id/imgFormProduct" />
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnFormProductSave"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -113,5 +123,39 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/progressDialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="6dp"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Subiendo imagen, espere un momento"
+                android:textStyle="normal" />
+
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
