--- a/app/src/main/res/layout/activity_drawer_home.xml
+++ b/app/src/main/res/layout/activity_drawer_home.xml
@@ -34,6 +34,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        app:headerLayout="@layout/header_menu"
         app:menu="@menu/menu_home_drawer" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
